--- a/styles/Teach_wave.css
+++ b/styles/Teach_wave.css
@@ -1,4 +1,7 @@
 /* nav styles start  */
+body{
+      background-color: rgb(26,11,46);
+}
 .nav_bar{
      display: flex;
      justify-content: center;
@@ -158,6 +161,96 @@
      width: 16px;
      height: 16px;
 }
+/* section two about section start form here  */
+
+.about_section{
+      text-align: center;
+      margin-top: 80px;
+      margin-bottom: 80px;
+      
+}
+.section_one_titel{
+      color: white;
+      font-weight: 700;
+      font-size: 3rem;
+}
+.section_one-sub-title{
+      color: white;
+}
+.section_one_last_line{
+      color: white;
+}
+
+.number{
+      font-weight: 700;
+      font-size: 3rem;
+      color: #00FF88;
+      margin-bottom: 0px;
+}
+.card_text{
+     margin-top: 16px;
+      color: white;
+      font-weight: 400;
+      font-size: 1rem;
+}
+
+.section_card_container{
+      display: flex;
+      gap: 80px;
+      justify-content: center;
+      align-items: center;
+      
+}
+.card{
+      
+     padding: 10px;
+}
+
+/* section two */
+.section_two{ 
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+}
+.card_layout{
+      width: 1200px;
+      height: 776px;
+      display: grid;
+      grid-template-columns: repeat(5, 200px);
+      grid-template-rows: repeat(3, 150px);
+      gap: 30px;
+     
+}
+.card_box{
+      border: 2px solid white;
+      padding: 40px;
+      
+}
+.card_box h4{
+      font-weight: 700;
+      font-size: 1.5rem;
+}
+.card_box p{
+      font-weight: 400;
+      font-size: 1rem;
+}
+.long_layout{
+      grid-column: span 2;
+      grid-row: span 2;
+}
+.wide_layout{
+      grid-column: span 3;
+      grid-row:  span 1;
+}
+.sami_long_layout{
+      grid-column: span 3;
+      grid-row: span 1;
+}
+.mini_layout{
+      grid-column: span 2;
+      grid-row: span 1;
+}
 /* responsive for small device */
 @media screen and (max-width:576px) {
     .nav_bar{
@@ -200,4 +293,14 @@
    .banner-card-fristchild{
      margin-left: 50px;
    }
+   /* section_one */
+   
+   .section_card_container{
+     
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      padding:  20px;
+      gap: 40px;
+   }
+  
 }
