--- a/styles/Teach_wave.css
+++ b/styles/Teach_wave.css
@@ -215,26 +215,18 @@ body{
       background-color: rgb(35,14,61);
 }
 .card_layout{
-      width: 1200px;
-      height: 776px;
+      max-width:1200px;
+      
       display: grid;
       grid-template-columns: repeat(5, 1fr);
       grid-template-rows: repeat(5, 100px);
       gap: 30px;
-      justify-content: center;
-      
+      justify-content: center;      
      
 }
-.card_one{ 
-       
-}
-.card_two{
-      
-      
 
-}
 .card_box{
-      border: 2px solid white;
+      
       background-color: rgb(47, 12, 94);
       border-radius: 40px;
       padding: 40px; 
@@ -265,8 +257,14 @@ body{
       grid-column: span 2;
       grid-row: span 2;
 }
+.card_section_titel{
+      color: white;
+      font-weight: 700;
+      font-size: 3rem;
+      text-align: center;
+}
 /* responsive for small device */
-@media screen and (max-width:576px) {
+@media screen and (max-width:768px) {
     .nav_bar{
          justify-content: space-between;
          padding: 10px  20px;
@@ -315,6 +313,17 @@ body{
       grid-template-columns: repeat(2, 1fr);
       padding:  20px;
       gap: 40px;
+      justify-items: center;
+      align-items: center;
    }
-  
+   /* section two  */
+   .card_layout{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+   }
+  .card_box{
+      width: 400px;
+  }
 }
